--- a/fonts/mestre.html
+++ b/fonts/mestre.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Mestre — Pedro Arilla</title>
-	<meta name="description" content="Mestre typeface by Pedro Arilla.">
+	<meta name="description" content="A German & Dutch inspired geometric sans-serif. Its solid and formal shapes are embedded with a discreet humanist flair resulting in a very versatile contemporary hybrid, and highly functional and flexible font for many of today’s editorial and corporate requirements.">
   <meta property="og:title" content="Mestre — Pedro Arilla"/>
-	<meta property="og:description" content="Mestre typeface by Pedro Arilla."/>
+	<meta property="og:description" content="A German & Dutch inspired geometric sans-serif. Its solid and formal shapes are embedded with a discreet humanist flair resulting in a very versatile contemporary hybrid, and highly functional and flexible font for many of today’s editorial and corporate requirements."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/fonts/mestre"/>
 	<meta property="og:image" content="https://www.pedroarilla.com/fonts/rsc/pedroarilla-mestre-1.jpg"/>
@@ -14,10 +14,10 @@
   <link type="text/css" rel="stylesheet" href="../style.css">
   <link type="text/plain" rel="author" href="../humans.txt" />
   <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
-  <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
+  <script type="text/javascript" src="https://payhip.com/payhip.js?v=24u68984"></script>
 </head>
 <body>
-  <section class="menu">
+  <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="./">fonts</a></li>
@@ -25,11 +25,9 @@
       <li><a href="../contact">contact</a></li>
     </ul>
   </section>
-  <section class="presentation">
+  <section class="content list">
     <h1><strong>Mestre</strong></h1>
     <p>A German &amp; Dutch inspired geometric sans-serif. Its solid and formal shapes are embedded with a discreet humanist flair resulting in a very versatile contemporary hybrid, and highly functional and flexible font for many of today’s editorial and corporate requirements.</p>
-  </section>
-  <section class="data" id="mestre">
     <h2>Features</h2>
     <ul>
       <li><strong>8 weights:</strong> Hairline, Thin, Light, Regular, Medium, Bold, Black, Heavy.
@@ -37,22 +35,18 @@
       <li><strong>900+ glyphs:</strong> 40+ languages supported.</li>
       <li><strong>OpenType features:</strong> small caps, case-sensitive forms, lining, tabular &amp; old-style figures, scientific superior/inferior figures, fractions, a set of arrows, etcetera.</li>
       <li><strong>Version:</strong> 1.2 — see <a href="rsc/mestre.log" target="_blank">log</a> and <a href="rsc/mestre-licence.txt" target="_blank">licence</a>.
-  </ul>
-  </section>
-  <section class="data" id="shopping">
-    <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="green" data-product="X15B">Buy Mestre font</a></p>
-    <p style="padding-top:20px"><strong>Pay what you want — minimum €10.</strong></p>
-  </section>
-  <section id="images">
+    </ul>
+    <div class="shopping">
+      <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="grey" data-product="X15B">Buy Mestre font</a></p>
+      <p>—Pay what you want: minimum €10.</p>
+    </div>
     <img src="rsc/pedroarilla-mestre-1.jpg">
     <img src="rsc/pedroarilla-mestre-2.jpg">
     <img src="rsc/pedroarilla-mestre-3.jpg">
     <img src="rsc/pedroarilla-mestre-4.jpg">
     <img src="rsc/pedroarilla-mestre-5.jpg">
-  </section>
-    <section class="data" id="images">
     <h2 style="margin-top:30px;">Selected Mestre in use</h2>
-<p style="margin-bottom:30px;"><em>Gràffica</em>, no. 2 (Valencia: PalauGea, 2016).</p>
+    <p style="margin-bottom:30px;"><em>Gràffica</em>, no. 2 (Valencia: PalauGea, 2016).</p>
     <img src="rsc/fontinuse-mestre-1.jpg">
     <img src="rsc/fontinuse-mestre-2.jpg">
     <img src="rsc/fontinuse-mestre-3.jpg">
@@ -62,13 +56,13 @@
     <img src="rsc/fontinuse-mestre-7.jpg">
     <img src="rsc/fontinuse-mestre-8.jpg">
     <img src="rsc/fontinuse-mestre-9.jpg">
+    <div class="shopping">
+      <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="grey" data-product="X15B">Buy Mestre font</a></p>
+      <p>—Pay what you want: minimum €10.</p>
+    </div>
   </section>
-  <section class="data" id="shopping">
-    <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="green" data-product="X15B">Buy Mestre font</a></p>
-    <p style="padding-top:20px"><strong>Pay what you want — minimum €10.</strong></p>
-  </section>
-  <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+  <section class="footer">
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
