--- a/fonts/rocknroll.html
+++ b/fonts/rocknroll.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Rock & Roll — Pedro Arilla</title>
-	<meta name="description" content="Rock & Roll type system by Pedro Arilla.">
+	<meta name="description" content="Rock & Roll is a multi-script type system ready to go up on stage and performs a set list full of your favourite songs. This duo is composed by Rock, the storming serif who plays Latin, Greek and Cyrillic; and Roll, the groovy sans serif who plays Latin, Arabic and Japanese.">
   <meta property="og:title" content="Rock & Roll — Pedro Arilla"/>
-	<meta property="og:description" content="Rock & Roll type system by Pedro Arilla."/>
+	<meta property="og:description" content="Rock & Roll is a multi-script type system ready to go up on stage and performs a set list full of your favourite songs. This duo is composed by Rock, the storming serif who plays Latin, Greek and Cyrillic; and Roll, the groovy sans serif who plays Latin, Arabic and Japanese."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://www.pedroarilla.com/fonts/rocknroll"/>
 	<meta property="og:image" content="https://www.pedroarilla.com/fonts/rsc/pedroarilla-rocknroll-04.png"/>
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
 </head>
 <body>
-  <section class="menu">
+  <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="./">fonts</a></li>
@@ -24,22 +24,18 @@
       <li><a href="../contact">contact</a></li>
     </ul>
   </section>
-  <section class="presentation">
+  <section class="content list">
     <h1><strong>Rock &amp; Roll</strong></h1>
-    <p>Rock & Roll is a multi-script type system ready to go up on stage and performs a set list full of your favourite songs. This duo is composed by Rock, the storming serif who plays Latin, Greek, and Cyrillic; and Roll, the groovy sans serif who plays Latin, Arabic, and Japanese.</p>
-    <p>Both typefaces were designed to play together, even when Roll is not just the sans serif version of Rock. They share DNA, but their voices are different: Rock has an old-school and decided fragrance, and Roll’s flavour is benignant and mature — but its combination will be always harmonic. Let yourself go for the rhythm and enjoy of its condensed proportions for longer lyrics and its sharp outlines for an immersive and heavenly experience.</p>
+    <p>Rock & Roll is a multi-script type system ready to go up on stage and performs a set list full of your favourite songs. This duo is composed by Rock, the storming serif who plays Latin, Greek and Cyrillic; and Roll, the groovy sans serif who plays Latin, Arabic and Japanese.</p>
+    <p>Both typefaces were designed to play together, even when Roll is not just the sans serif version of Rock. They share DNA, but their voices are different: Rock has an old-school and decided fragrance and Roll’s flavour is benignant and mature — but its combination will be always harmonic. Let yourself go for the rhythm and enjoy of its condensed proportions for longer lyrics and its sharp outlines for an immersive and heavenly experience.</p>
     <p>[Project developed as part of the <a href="https://typefacedesign.net/typefaces/year/2017/rock-roll/" title="Rock & Roll at MATD 16/17" target="_blank">MATD 16/17</a>]</p>
-  </section>
-  <section class="data" id="mestre">
     <h2>Features</h2>
-    <ul>
-      <li><strong>5 scripts:</strong> Arabic, Cyrillic, Greek, Japanese, and Latin.</li>
-      <li><strong>48 fonts:</strong> 2 styles, 6 weights, 80+ languages supported, and 1,500+ glyphs.</li>
+    <ul style="margin-bottom: 1.5em;">
+      <li><strong>5 scripts:</strong> Arabic, Cyrillic, Greek, Japanese and Latin.</li>
+      <li><strong>48 fonts:</strong> 2 styles, 6 weights, 80+ languages supported and 1,500+ glyphs.</li>
       <li><strong>OpenType features:</strong> small caps, case-sensitive forms, lining, tabular &amp; old-style figures, scientific superior/inferior figures, fractions, manicules, discretionary ligatures, vocalization marks (Arabic), etcetera.</li>
       <li><strong>Price:</strong> Not for sale (yet)</li>
-  </ul>
-  </section>
-  <section style="padding-top:30px;" id="images">
+    </ul>
     <img src="rsc/pedroarilla-rocknroll-01.jpg">
     <img src="rsc/pedroarilla-rocknroll-02.png">
     <img src="rsc/pedroarilla-rocknroll-03.jpg">
@@ -49,8 +45,8 @@
     <img src="rsc/pedroarilla-rocknroll-07.jpg">
     <img src="rsc/pedroarilla-rocknroll-08.png">
   </section>
-  <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+  <section class="footer">
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
