--- a/fonts/valentina.html
+++ b/fonts/valentina.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Valentina — Pedro Arilla</title>
-	<meta name="description" content="Valentina typeface by Pedro Arilla.">
+	<meta name="description" content="A classic didone designed following the rules set by Bodoni in the 18th Century, combined with many features from the antique Spanish punches of that period. ">
   <meta property="og:title" content="Valentina — Pedro Arilla"/>
-	<meta property="og:description" content="Valentina typeface by Pedro Arilla."/>
+	<meta property="og:description" content="A classic didone designed following the rules set by Bodoni in the 18th Century, combined with many features from the antique Spanish punches of that period. "/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/fonts/valentina"/>
 	<meta property="og:image" content="https://www.pedroarilla.com/fonts/rsc/pedroarilla-valentina-01.png"/>
@@ -14,10 +14,10 @@
   <link type="text/css" rel="stylesheet" href="../style.css">
   <link type="text/plain" rel="author" href="../humans.txt" />
   <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
-  <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
+  <script type="text/javascript" src="https://payhip.com/payhip.js?v=24u68984"></script>
 </head>
 <body>
-  <section class="menu">
+  <section class="header">
     <ul>
       <ul>
         <li><strong><a href="../">pedroarilla</a></strong></li>
@@ -27,11 +27,9 @@
       </ul>
     </ul>
   </section>
-  <section class="presentation">
+  <section class="content list">
     <h1><strong>Valentina</strong></h1>
     <p>A classic didone designed following the rules set by Bodoni in the 18th Century, combined with many features from the antique Spanish punches of that period. The font is named after type designer Pedro Arilla’s grandmother as a tribute.</p>
-  </section>
-  <section class="data" id="valentina">
     <h2>Features</h2>
     <ul>
       <li><strong>1 style:</strong> 450+ glyphs and 3 stylistic sets</li>
@@ -39,31 +37,27 @@
       <li><strong>Ligatures:</strong> 46 ligatures.</li>
       <li><strong>Price:</strong> pay-what-you-want.</li>
       <li><strong>Version:</strong> 1.003 — see <a href="rsc/valentina.log" target="_blank">log</a> and <a href="rsc/valentina-licence.txt" target="_blank">licence</a>.
-  </ul>
-  </section>
-  <section class="data" id="shopping">
-    <p><a href="https://payhip.com/b/n1sU" class="payhip-buy-button" data-theme="green" data-product="n1sU">Buy Valentina font</a></p>
-    <p style="padding-top:20px"><strong>Pay what you want — minimum €1.</strong></p>
-  </section>
-  <section id="images">
+    </ul>
+    <div class="shopping">
+      <p><a href="https://payhip.com/b/n1sU" class="payhip-buy-button" data-theme="grey" data-product="n1sU">Buy Valentina font</a></p>
+      <p>—Pay what you want: minimum €1.</p>
+    </div>
     <img src="rsc/pedroarilla-valentina-01.png">
     <img src="rsc/pedroarilla-valentina-03.png">
-  </section>
-    <section class="data" id="images">
     <h2 style="margin-top:30px;">Selected Valentina in use</h2>
-<p style="margin-bottom:30px;">Francisco de Quevedo, <em>Gracias y desgracias del ojo del culo</em> (Logroño: Pepitas de calabaza, 2016).</p>
+    <p style="margin-bottom:30px;">Francisco de Quevedo, <em>Gracias y desgracias del ojo del culo</em> (Logroño: Pepitas de calabaza, 2016).</p>
     <img src="rsc/fontinuse-valentina-1.jpg">
     <img src="rsc/fontinuse-valentina-2.jpg">
     <img src="rsc/fontinuse-valentina-3.jpg">
     <img src="rsc/fontinuse-valentina-4.jpg">
     <img src="rsc/fontinuse-valentina-5.jpg">
+    <div class="shopping">
+      <p><a href="https://payhip.com/b/n1sU" class="payhip-buy-button" data-theme="grey" data-product="n1sU">Buy Valentina font</a></p>
+      <p>—Pay what you want: minimum €1.</p>
+    </div>
   </section>
-  <section class="data" id="shopping">
-    <p><a href="https://payhip.com/b/n1sU" class="payhip-buy-button" data-theme="green" data-product="n1sU">Buy Valentina font</a></p>
-    <p style="padding-top:20px"><strong>Pay what you want — minimum €1.</strong></p>
-  </section>
-  <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+  <section class="footer">
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
