--- a/miscellany/awards-exhibitions.html
+++ b/miscellany/awards-exhibitions.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Exhibitions and Awards — Pedro Arilla</title>
-	<meta name="description" content="A list of exhibition where I participated and awards I got for my work.">
+	<meta name="description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
   <meta property="og:title" content="Exhibitions and Awards — Pedro Arilla"/>
-	<meta property="og:description" content="A list of exhibition where I participated and awards I got for my work."/>
+	<meta property="og:description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/reading"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
 </head>
 <body>
-  <section class="menu">
+  <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="../fonts">fonts</a></li>
@@ -24,8 +24,8 @@
       <li><a href="../contact">contact</a></li>
     </ul>
   </section>
-  <section class="data" id="exhibitions">
-    <h2>Exhibitions</h2>
+  <section class="content list">
+    <h1>Exhibitions</h1>
     <ul>
       <li><strong>New Bulgarian Typography 2</strong> (collective). Cyrillic type design, Moscow (Russia) and Sofia (Bulgaria), 2019.</li>
       <li><strong>Tipografía en la cultura contemporánea</strong> (collective). Type design, Monterrey, Mexico, 2018.</li>
@@ -39,9 +39,7 @@
       <li><strong>VIII Jornadas ESDA</strong> (collective). Type design, Zaragoza, Spain, 2014.</li>
       <li><strong>Ampersand</strong> (collective). Type design, Brighton, UK, 2013.</li>
     </ul>
-  </section>
-  <section class="data" id="awards">
-    <h2>Awards</h2>
+    <h1>Awards</h1>
     <ul>
       <li><strong>Dutch Creativity Awards 2020</strong>, Bronze for <em>Amsteldok</em>.</li>
       <li><strong>European Design Awards 2020</strong>, Gold for <em>Amsteldok</em>.</li>
@@ -63,8 +61,8 @@
       <li><strong>CEA 2012</strong>, 2nd best project for <em>Valentina</em>.</li>
     </ul>
   </section>
-  <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+  <section class="footer">
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
