--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Gaming — Pedro Arilla</title>
-	<meta name="description" content="A list of the videogames I’ve played. If I don’t enjoy a game, I quit — so I recommend each finished game in this list.">
+	<meta name="description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
   <meta property="og:title" content="Gaming — Pedro Arilla"/>
-	<meta property="og:description" content="A list of the videogames I’ve played. If I don’t enjoy a game, I quit — so I recommend each finished game in this list."/>
+	<meta property="og:description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/reading"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
 </head>
 <body>
-  <section class="menu">
+  <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="../fonts">fonts</a></li>
@@ -24,20 +24,18 @@
       <li><a href="../contact">contact</a></li>
     </ul>
   </section>
-  <section class="presentation" style="padding-bottom:0">
+  <section class="content list">
     <h1><strong>Gaming</strong></h1>
-    <p>A list of the videogames I’ve played. If I don’t enjoy a game, I quit — so I recommend each finished game in this list.</p>
     <p>
     💙 means I finished it.<br>
     ❤️ means FREAKIN’ WOW.<br>
     </p>
-  </section>
-  <section class="data" id="games-2020">
     <h2>2020</h2>
     <ul>
-      <li><em><strong>Ori and the Will of Wisps</em></strong> on Nintendo Switch, 5 hours 💙</li>
+      <li><em><strong>Hades</em></strong> on Nintendo Switch, 10 hours</li>
+      <li><em><strong>Ori and the Will of Wisps</em></strong> on Nintendo Switch, 5 hours</li>
       <li><em><strong>Guacamelee! 2</em></strong> on Nintendo Switch, 15 hours 💙</li>
-      <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 55 hours 💙</li>
+      <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 55 hours</li>
       <li><em><strong>The Legend of Zelda: Link’s Awakening</em></strong> on Nintendo Switch, 25 hours 💙</li>
       <li><em><strong>Yooka-Laylee and the Impossible Lair</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Fortnite</em></strong> on Nintendo Switch, 10 hours</li>
@@ -49,8 +47,6 @@
       <li><em><strong>SteamWorld Dig 2</em></strong> on Nintendo Switch, 10 hours 💙</li>
       <li><em><strong>Hollow Knight</em></strong> on Nintendo Switch, 20 hours</li>
     </ul>
-  </section>
-  <section class="data" id="games-2019">
     <h2>2019</h2>
     <ul>
       <li><em><strong>Crash Bandicoot N. Sane Trilogy</em></strong> on Nintendo Switch, 5 hours</li>
@@ -59,16 +55,14 @@
       <li><em><strong>Slain</em></strong> on Nintendo Switch, 5 hours</li>
       <li><em><strong>Donkey King Country: Tropical Freeze</em></strong> on Nintendo Switch, 20 hours 💙</li>
     </ul>
-  </section>
-  <section class="data" id="games-2018">
     <h2>2018</h2>
     <ul>
       <li><em><strong>NBA 2K19</em></strong> on Nintendo Switch, 20 hours</li>
       <li><em><strong>Super Mario Odyssey</em></strong> on Nintendo Switch, 30 hours ❤️</li>
     </ul>
   </section>
-  <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+  <section class="footer">
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
