--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Reading — Pedro Arilla</title>
-	<meta name="description" content="A list of the books I’ve read (or re-read). If I don’t enjoy a book, I quit — so I kind of recommend each book in this list.">
+	<meta name="description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
   <meta property="og:title" content="Reading — Pedro Arilla"/>
-	<meta property="og:description" content="A list of the books I’ve read (or re-read). If I don’t enjoy a book, I quit — so I kind of recommend each book in this list."/>
+	<meta property="og:description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/reading"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
 </head>
 <body>
-  <section class="menu">
+  <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="../fonts">fonts</a></li>
@@ -24,16 +24,13 @@
       <li><a href="../contact">contact</a></li>
     </ul>
   </section>
-  <section class="presentation" style="padding-bottom:0">
+  <section class="content list">
     <h1><strong>Reading</strong></h1>
-    <p>A list of the books I’ve read (or re-read). If I don’t enjoy a book, I quit — so I kind of recommend each book in this list.</p>
     <p>
     💙 means I very recommend it.<br>
     ❤️ means FREAKIN’ WOW.<br>
     💕 means I re-read this book — so potentially “wow-WOW”.<br>
     </p>
-  </section>
-  <section class="data" id="books-2020">
     <h2>2020</h2>
     <ul>
       <li><em><strong>Replay</em></strong> by Tristan Donovan 💙</li>
@@ -77,8 +74,6 @@
       <li><em><strong>Proust and the Squid</em></strong> by Maryanne Wolf</li>
       <li><em><strong>El ejército negro</em></strong> de Servando Rocha</li>
     </ul>
-  </section>
-  <section class="data" id="books-2019">
     <h2>2019</h2>
     <ul>
       <li><em><strong>Eleven rings</em></strong> by Phil Jackson and Hugh Delehanty</li>
@@ -139,8 +134,8 @@
       <li><em><strong>De qué hablo cuando hablo de escribir</em></strong> de Haruki Murakami</li>
     </ul>
   </section>
-  <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+  <section class="footer">
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
