--- a/miscellany/speaking-teaching.html
+++ b/miscellany/speaking-teaching.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Speaking and Teaching — Pedro Arilla</title>
-	<meta name="description" content="My latest talks, conferences, workshops and lectures.">
+	<meta name="description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
   <meta property="og:title" content="Speaking and Teaching — Pedro Arilla"/>
-	<meta property="og:description" content="My latest talks, conferences, workshops and lectures."/>
+	<meta property="og:description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/reading"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
 </head>
 <body>
-  <section class="menu">
+  <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="../fonts">fonts</a></li>
@@ -24,8 +24,8 @@
       <li><a href="../contact">contact</a></li>
     </ul>
   </section>
-  <section class="data" id="talks">
-    <h2>Speaking</h2>
+  <section class="content list">
+    <h1>Speaking</h1>
     <ul>
       <li><strong>Narrativa tipográfica.</strong> Creatus Dominus, online, 2020.</li>
       <li><strong>Pedro Arilla.</strong> TypeThursday Bogotá, online, 2020.</li>
@@ -46,9 +46,7 @@
       <li><strong>¿Se puede vivir de la tipografía?</strong> Sevilla Design Walk, Sevilla, Spain, 2012.</li>
       <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> Escuela de Arte de Huesca, Huesca, Spain, 2012.</li>
     </ul>
-  </section>
-  <section class="data" id="teaching">
-    <h2>Teaching</h2>
+    <h1>Teaching</h1>
     <ul>
       <li><strong>Type design.</strong> Type Crit Crew, online, <a href="https://medium.com/@juan_kafka/type-crit-crew-fdd180b881c" target="_blank">link</a>, 2020–.</li>
       <li><strong>Type design.</strong> V Glíglifo, Sos del Rey Católico, Spain, 2018.</li>
@@ -78,8 +76,8 @@
       <li><strong>Editorial design.</strong> Escuela de Arte de Huesca, Huesca, Spain, 2012.</li>
     </ul>
   </section>
-  <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+  <section class="footer">
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
