--- a/contact/index.html
+++ b/contact/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Contact — Pedro Arilla</title>
-	<meta name="description" content="Contact and social profiles.">
+	<meta name="description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
   <meta property="og:title" content="Contact — Pedro Arilla"/>
-	<meta property="og:description" content="Contact and social profiles."/>
+	<meta property="og:description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/about"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
 </head>
 <body>
-  <section class="menu">
+  <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="../fonts">fonts</a></li>
@@ -24,31 +24,27 @@
       <li><a href="./">contact</a></li>
     </ul>
   </section>
-  <section class="data" id="contact">
-    <h2>Contact</h2>
+  <section class="content">
+    <h1>Contact</h1>
     <ul>
-      <li>info@pedroarilla.com</li>
+      <li>studio@pedroarilla.com</li>
       <li>+34 660 908 920</li>
       <li>+44 (0)7522 185272</li>
     </ul>
-  </section>
-  <section class="data" id="social">
-    <h2>Social</h2>
+    <h1>Social</h1>
     <ul>
       <li><a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a></li>
-      <li><a href="https://facebook.com/pedroarillacortes" rel="me" target="_blank" title="Facebook Pedro Arilla's profile">Facebook</a></li>
       <li><a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a></li>
       <li><a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></li>
+      <li><a href="https://facebook.com/pedroarillacortes" rel="me" target="_blank" title="Facebook Pedro Arilla's profile">Facebook</a></li>
       <li><a href="https://open.spotify.com/user/pedroarilla" rel="me" target="_blank" title="Spotify Pedro Arilla's profile">Spotify</a></li>
       <li><a href="https://github.com/pedroarilla" rel="me" target="_blank" title="GitHub Pedro Arilla's profile">GitHub</a></li>
     </ul>
-  </section>
-  <section class="presentation" style="padding-bottom:0">
-    <img src="rsc/pedroarilla.jpg">
+    <img src="rsc/pedroarilla.jpg" id="portrait">
     <p style="font-size: .75em;">Photo by <a href="https://www.xoelburgues.com/" target="_blank">Xoel Burgués</a> (Zaragoza, 2017).</p>
   </section>
-  <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+  <section class="footer">
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
