--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Pedro Arilla</title>
-	<meta name="description" content="¡Hola! I’m Pedro Arilla, an independent designer with a passion for words.">
+	<meta name="description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
   <meta property="og:title" content="Pedro Arilla"/>
-	<meta property="og:description" content="¡Hola! I’m Pedro Arilla, an independent designer with a passion for words."/>
+	<meta property="og:description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
 </head>
 <body>
-  <section class="menu">
+  <section class="header">
     <ul>
       <li><strong><a href="./">pedroarilla</a></strong></li>
       <li><a href="./fonts">fonts</a></li>
@@ -24,12 +24,12 @@
       <li><a href="./contact">contact</a></li>
     </ul>
   </section>
-  <section class="presentation">
-    <h1><strong>¡Hola!</strong> I’m Pedro Arilla, an independent designer with a passion for words.</h1>
-    <p>I am interested in how typography plays a storytelling role in the intersection of culture, technology and sociology. I’ve been designing, writing, teaching and lecturing about typefaces for the last decade. I’ve worked as a Creative Director at Monotype and Fontsmith. I hold an MA in Typeface Design from the University of Reading (graduating with distinction); host one of the main podcasts and publications on typography in Spanish (<a href="https://donserifa.com" target="_blank">Don Serifa</a>); and co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>).</p>
+  <section class="content">
+    <h1 id="index"><strong>¡Hola!</strong> I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.</h1>
+    <p id="index">I’ve been designing, writing, teaching and lecturing about typefaces for the last decade. I’ve worked as a Creative Director at Monotype and Fontsmith; I hold an MA in Typeface Design from the University of Reading (graduating with distinction); host one of the main podcasts and publications on typography in Spanish (<a href="https://donserifa.com" target="_blank">Don Serifa</a>); and co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>).</p>
   </section>
-  <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+  <section class="footer">
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
