--- a/miscellany/index.html
+++ b/miscellany/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Miscellany — Pedro Arilla</title>
-	<meta name="description" content="A bunch of things I like to keep record of.">
+	<meta name="description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
   <meta property="og:title" content="Miscellany — Pedro Arilla"/>
-	<meta property="og:description" content="A bunch of things I like to keep record of."/>
+	<meta property="og:description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/code"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
 </head>
 <body>
-  <section class="menu">
+  <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="../fonts">fonts</a></li>
@@ -24,20 +24,19 @@
       <li><a href="../contact">contact</a></li>
     </ul>
   </section>
-  <section class="presentation" style="padding-bottom:0">
+  <section class="content">
       <h1><strong>Miscellany</strong></h1>
-      <p>What can I say? I just love doing a pletora of things — and making lists is one of them.</p>
+      <p style="line-height:1.5em;">
+        &rarr; <a href="./speaking-teaching.html">Speaking and Teaching</a></br>
+        &rarr; <a href="./awards-exhibitions.html">Awards and Exhibitions</a></br>
+        &rarr; <a href="./coding.html">Coding</a></br>
+        &rarr; <a href="./writing.html">Writing</a></br>
+        &rarr; <a href="./reading.html">Reading</a></br>
+        &rarr; <a href="./gaming.html">Gaming</a>
+      </p>
   </section>
-  <section class="presentation" style="padding-bottom:0">
-      <h2>&rarr; <a href="./speaking-teaching.html">Speaking and Teaching</a></h2>
-      <h2>&rarr; <a href="./awards-exhibitions.html">Awards and Exhibitions</a></h2>
-      <h2>&rarr; <a href="./coding.html">Coding</a></h2>
-      <h2>&rarr; <a href="./writing.html">Writing</a></h2>
-      <h2>&rarr; <a href="./reading.html">Reading</a></h2>
-      <h2>&rarr; <a href="./gaming.html">Gaming</a></h2>
-  </section>
-  <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+  <section class="footer">
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
