--- a/miscellany/writing.html
+++ b/miscellany/writing.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Writing — Pedro Arilla</title>
-	<meta name="description" content="A list of the articles I published and the blogs and magazines I’ve collaborated with — plus some podcasts.">
+	<meta name="description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
   <meta property="og:title" content="Writing — Pedro Arilla"/>
-	<meta property="og:description" content="A list of the articles I published and the blogs and magazines I’ve collaborated with — plus some podcasts."/>
+	<meta property="og:description" content="¡Hola! I’m an independent Type Designer and Type Director with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/texts"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
 </head>
 <body>
-  <section class="menu">
+  <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="../fonts">fonts</a></li>
@@ -24,11 +24,8 @@
       <li><a href="../contact">contact</a></li>
     </ul>
   </section>
-  <section class="presentation" style="padding-bottom:0">
-      <h1><strong>Writing</strong></h1>
-      <p>A list of the articles I published and the blogs and magazines I’ve collaborated with — plus some podcasts.</p>
-  </section>
-  <section class="data" id="publications">
+  <section class="content list">
+    <h1><strong>Writing</strong></h1>
     <ul>
       <li><strong><em><a href="https://donserifa.com" target="_blank">donserifa.com</a></em></strong> (Editor), Articles and podcast on typography, 2011–now.</li>
       <li><strong><em><a href="https://graffica.info/author/pedroarilla/" target="_blank">graffica.info</a></em></strong>, Articles on typography and type design, 2016 + 2020–now.
@@ -51,8 +48,8 @@
       <li><strong><em><a href="https://www.unostiposduros.com/author/pedro/" target="_blank">unostiposduros.com</a></em></strong>, News on typography and type design, 2012–2013.</li>
     </ul>
   </section>
-  <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+  <section class="footer">
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
