--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <section class="header">
     <ul>
       <li><strong><a href="./">pedroarilla</a></strong></li>
+      <li class="newlineheader"></li>
       <li><a href="./fonts">fonts</a></li>
       <li><a href="./miscellany">miscellany</a></li>
       <li><a href="./contact">contact</a></li>
@@ -29,7 +30,7 @@
     <p id="index">I’ve been designing, writing, teaching and lecturing about typefaces for the last decade. I’ve worked as a Creative Director at Monotype and Fontsmith; I hold an MA in Typeface Design from the University of Reading (graduating with distinction); host one of the main podcasts and publications on typography in Spanish (<a href="https://donserifa.com" target="_blank">Don Serifa</a>); and co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>).</p>
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
