--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -35,6 +35,8 @@
     <h2>2020</h2>
     <ul>
       <li><em><strong>Replay</em></strong> by Tristan Donovan 💙</li>
+      <li><em><strong>El ABC de la tipografía</em></strong> de David Rault y VV.AA.</li>
+      <li><em><strong>El fin de la eternidad</em></strong> de Isaac Asimov</li>
       <li><em><strong>Filosofía de la cultura</em></strong> de Jesús Mosterín</li>
       <li><em><strong>Misery</em></strong> de Stephen King</li>
       <li><em><strong>Los jinetes del Apocalipsis</em></strong> de Dawkins, Hitchens, Dennett  y Harris</li>
