--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -35,12 +35,13 @@
     <h2>2020</h2>
     <ul>
       <li><em><strong>Replay</em></strong> by Tristan Donovan 💙</li>
+      <li><em><strong>El infinito en un junco</em></strong> de Irene Vallejo ❤️</li>
       <li><em><strong>El ABC de la tipografía</em></strong> de David Rault y VV.AA.</li>
       <li><em><strong>El fin de la eternidad</em></strong> de Isaac Asimov</li>
       <li><em><strong>Filosofía de la cultura</em></strong> de Jesús Mosterín</li>
       <li><em><strong>Misery</em></strong> de Stephen King</li>
       <li><em><strong>Los jinetes del Apocalipsis</em></strong> de Dawkins, Hitchens, Dennett  y Harris</li>
-      <li><em><strong>Falcó</em></strong> de Arturo Pérez-Reverte [⚠️ Too sexist, not reading the next ones]</li>
+      <li><em><strong>Falcó</em></strong> de Arturo Pérez-Reverte [⚠️ too sexist, abandoning series]</li>
       <li><em><strong>Sapiens</em></strong> de Yuval Noah Harari 💙</li>
       <li><em><strong>Tipometría</em></strong> de Miguel Catopodis</li>
       <li><em><strong>Lluvia fina</em></strong> de Luis Landero</li>
@@ -86,7 +87,7 @@
       <li><em><strong>Invincible</em></strong> by Robert Kirkman, Ryan Ottley et al.</li>
       <li>&emsp;&rarr; no. 1–100</li>
       <li><em><strong>Eric Clapton: The autobiography</em></strong> by Eric Clapton 💙</li>
-      <li><em><strong>Loba Negra</em></strong> de Juan Gómez-Jurado 💙</li>
+      <li><em><strong>Loba Negra</em></strong> de Juan Gómez-Jurado</li>
       <li><em><strong>El corazón de las tinieblas</em></strong> de Joseph Conrad</li>
       <li><em><strong>Guía Gigantes NBA 2019-20</em></strong> de Andrés Monje</li>
       <li><em><strong>Why I write</em></strong> by George Orwell</li>
