--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -33,7 +33,7 @@
     </p>
     <h2>2020</h2>
     <ul>
-      <li><em><strong>Hades</em></strong> on Nintendo Switch, 10 hours</li>
+      <li><em><strong>Hades</em></strong> on Nintendo Switch, 30 hours 💙</li>
       <li><em><strong>Ori and the Will of Wisps</em></strong> on Nintendo Switch, 5 hours</li>
       <li><em><strong>Guacamelee! 2</em></strong> on Nintendo Switch, 15 hours 💙</li>
       <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 55 hours</li>
